tdf#93720: Interactive frame insertion is disabled if table is selected

Current implementation does not support interactive frame insertion
that moves the table into the frame

Change-Id: I57a69f680f1218bd3014da494d41542ad0b72dd1