sw/source/uibase/shells/textsh.cxx
@@ -727,6 +727,7 @@ void SwTextShell::StateInsert( SfxItemSet &rSet )
             case FN_INSERT_FRAME_INTERACT:
                 {
                     if( GetShell().IsSelFrmMode()
+                        || rSh.IsTableMode()
                         || GetShell().CrsrInsideInputField()
                         || bCrsrInHidden )
                         rSet.DisableItem(nWhich);
